--- a/assets/css/theme-styles.css
+++ b/assets/css/theme-styles.css
@@ -1,5 +1,1 @@
-/* colors */
-/* shadows */
-/* transition duration */
-/* easing curves */
-/*# sourceMappingURL=theme-styles.css.map */
+@media (min-width: 769px){.main-container{padding-left:0px;padding-right:0px}}@media (max-width: 768px){.main-container{padding-left:20px;padding-right:20px}}body{color:#141414;font-size:22px;line-height:143.9%}.main-title{font-family:'Poppins', sans-serif;font-size:48px;line-height:127.5%}@media (max-width: 768px){.main-title{font-size:36px}}header{padding:62px 0px}@media (max-width: 768px){header{padding:30px 0px}}
