--- a/assets/sass/_helpers.scss
+++ b/assets/sass/_helpers.scss
@@ -1,4 +1,7 @@
 .main-container{
+    @media(min-width:1200px){
+        max-width: 1347px;
+    }
     @media(min-width:769px){
         padding-left: 0px;
         padding-right: 0px;
@@ -13,13 +16,25 @@ body{
     color: $black;
     font-size: 22px;
     line-height: 143.9%;
+    font-family: 'Work sans', sans-serif;
 }
 .main-title{
     font-family: 'Poppins', sans-serif;
     font-size: 48px;
     line-height: 127.5%;
+    font-weight: 600;
 
     @media(max-width:768px){
         font-size: 36px;
     }
+}
+.subtitle{
+    font-size: 22px;
+    line-height: 143.9%;
+    font-weight: bold;
+}
+.seperator{
+    border-top: 3px solid $black;
+    width: 163px;
+    margin-left: 0;
 }
