--- a/assets/sass/_hero-section.scss
+++ b/assets/sass/_hero-section.scss
@@ -12,6 +12,7 @@
             font-weight: 500;
             margin-top: 21px;
             margin-bottom: 0px;
+            line-height: 183.3%;
         }
     }
     .right-side{
@@ -60,6 +61,7 @@
         .left-side{
             ul{
                 margin-top: 24px;
+                font-size: 18px;
             }
         }
     }
