--- a/assets/sass/theme-styles.scss
+++ b/assets/sass/theme-styles.scss
@@ -1,6 +1,6 @@
 @import "variables";
 @import "helpers";
-
 @import "header";
+@import "slider";
 @import "hero-section";
 @import "job-desc-section";
