--- a/assets/css/theme-styles.css
+++ b/assets/css/theme-styles.css
@@ -96,10 +96,47 @@ header {
   }
 }
 
+.clients-section {
+  margin-bottom: 60px;
+}
+
 .clients-section .main-title {
   max-width: 80%;
   margin: auto;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  .clients-section .main-title {
+    max-width: 100%;
+    text-align: left;
+  }
+}
+
+@media (max-width: 768px) {
+  .clients-section {
+    margin-bottom: 40px;
+  }
+}
+
+.icons-section {
+  margin-bottom: 80px;
+}
+
+@media (max-width: 768px) {
+  .icons-section {
+    margin-bottom: 60px;
+  }
+}
+
+.process-section {
+  margin-bottom: 80px;
+}
+
+@media (max-width: 768px) {
+  .process-section {
+    margin-bottom: 30px;
+  }
 }
 
 .slider .item {
