--- a/assets/sass/_slider.scss
+++ b/assets/sass/_slider.scss
@@ -3,6 +3,29 @@
         max-width: 80%;
         margin: auto;
         text-align: center;
+
+        @media (max-width: 768px){
+            max-width: 100%;
+            text-align: left;
+        }
+    }
+    margin-bottom: 60px;
+    @media (max-width: 768px){
+        margin-bottom: 40px;
+    }
+}
+
+.icons-section{
+    margin-bottom: 80px;
+    @media (max-width: 768px){
+        margin-bottom: 60px;
+    }
+}
+
+.process-section{
+    margin-bottom: 80px;
+    @media (max-width: 768px){
+        margin-bottom: 30px;
     }
 }
 
