--- a/assets/css/theme-styles.css
+++ b/assets/css/theme-styles.css
@@ -2,10 +2,10 @@
 /* shadows */
 /* transition duration */
 /* easing curves */
-@media (min-width: 1200px) and (max-width: 1400px) {
+@media (min-width: 769px) {
   .main-container {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
 
@@ -15,10 +15,9 @@
   }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 1200px) and (max-width: 1400px) {
   .main-container {
-    padding-left: 0px;
-    padding-right: 0px;
+    max-width: 1000px;
   }
 }
 
