Fixed height issue

--- a/assets/sass/_job-desc-section.scss
+++ b/assets/sass/_job-desc-section.scss
@@ -5,6 +5,7 @@
         .job-desc-wrapper{
             background-color: $primary;
             padding: 53px 43px 60px;
+            height: 100%;
             .job-title{
                 font-weight: 600;
                 font-size: 36px;
