--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -19,7 +19,7 @@ $white-1 : #FFFFFF;
 $white-1-hover : #F2F2F2;
 $white-1-pressed : #EDEDED;
 
-$primary : #FCD800;
+$primary : #F0C60A;
 $primary-hover : #ffe44d;
 $primary-pressed : #ffe44d;
 
