--- a/assets/sass/_job-desc-section.scss
+++ b/assets/sass/_job-desc-section.scss
@@ -5,6 +5,7 @@
         .job-desc-wrapper{
             background-color: $primary;
             padding: 53px 43px 60px;
+            padding-bottom: 120px;
             height: 100%;
             .job-title{
                 font-weight: 600;
@@ -23,10 +24,14 @@
                 padding-left: 25px;
                 margin: 45px 0px 40px;
             }
+            .float-button{
+                position: absolute;
+                bottom: 60px;
+            }
         }
     }
     /* tablet + mobile */
-    @media(max-width:768px){
+    @media(max-width:991px){
         margin-bottom: 20px;
         .job-desc{
             padding: 0px;
@@ -35,6 +40,7 @@
             }
             .job-desc-wrapper{
                 padding: 30px 20px;
+                padding-bottom: 90px;
                 .job-title{
                     font-size: 24px;
                 }
@@ -46,11 +52,14 @@
                     padding-left: 20px;
                     margin: 30px 0px;
                 }
+                .float-button{
+                    bottom: 30px;
+                }
             }
         }
     }
     /* desktop */
-    @media(min-width:769px){
+    @media(min-width:992px){
         .job-desc{
             &:first-child{
                 padding-right: 10.5px;
