--- a/assets/sass/_slider.scss
+++ b/assets/sass/_slider.scss
@@ -1,17 +1,16 @@
 .clients-section{
     .main-title{
-        max-width: 80%;
+        max-width: 90%;
         margin: auto;
         text-align: center;
 
         @media (max-width: 768px){
             max-width: 100%;
-            text-align: left;
         }
     }
     margin-bottom: 60px;
     @media (max-width: 768px){
-        margin-bottom: 40px;
+        margin-bottom: 60px;
     }
 }
 
@@ -25,7 +24,13 @@
 .process-section{
     margin-bottom: 80px;
     @media (max-width: 768px){
-        margin-bottom: 30px;
+        margin-bottom: 40px;
+    }
+    .main-title{
+        text-align: center;
+        @media(min-width: 992px){
+            margin-bottom: 35px;
+        }
     }
 }
 
@@ -55,9 +60,10 @@
             padding-bottom: 20%;
             z-index: 2;
             position: absolute;
-            top: 20px;
-            left: 20px;
-            width: 36.6%;
+            top: -6px;
+            left: 0;
+            // width: 36.6%;
+            width: 30%;
             @media (max-width:992px){
                 position: relative;
                 top: unset;
@@ -70,13 +76,16 @@
 
         .item-gif {
             position: absolute;
-            top: 0;
-            transform: translateY(-20%);
-            right: 20px;
-            width: 80%;
+            top: -6px;
+            // transform: translateY(-20%);
+            right: 0;
+            // width: 80%;
+            width: 70%;
             z-index: 1;
 
             @media (max-width:992px){
+                top: 0;
+                transform: translateY(-20%);
                 width: 100%;
                 right: 0;
             }
@@ -97,20 +106,25 @@
 #clients-slick {
     margin-top: 7%;
     @media (max-width:479px){
-        margin-right: -20px;
-        margin-left: -20px;
+        margin-right: -15px;
+        margin-left: -15px;
         .slick-slide:not(.slick-active) {
             transform: scale(0.9);
         }
         p{
+            font-size: 18px;
+            line-height: 25.9px;
             text-align: center;
         }
+    }
+    @media (min-width:992px){
+        margin-top: 2%;
     }
 }
 
 #process-slick {
     @media (max-width: 479px){
-        margin-right: -20px !important;
+        margin-right: -15px !important;
     }
     .item{
         padding: 30px;
@@ -128,6 +142,15 @@
                 height: 81px;
             }
         }
+        @media (max-width: 479px){
+            padding-left: 22px;
+            padding-right: 22px;
+            
+            p{
+                font-size: 18px;
+                line-height: 25.9px;;
+            }
+        }
     }
     .slick-list{
         padding-top: 80px;
@@ -135,7 +158,7 @@
     .slick-list{
         padding-top: 85px !important;
         @media (max-width: 992px){
-            padding-top: 70px;
+            padding-top: 70px !important;
         }
         @media (max-width: 479px){
             padding-left: 0 !important;
@@ -171,8 +194,8 @@
         max-width: 75%
     }
     @media (max-width: 479px){
-        margin-left: -20px;
-        margin-right: -20px;
+        margin-left: -15px;
+        margin-right: -15px;
     }
     .icon-logo{
         margin-right: 53px;
