Mail to email updated

--- a/assets/sass/_hero-section.scss
+++ b/assets/sass/_hero-section.scss
@@ -84,6 +84,11 @@
         }
     }
     /* mobile + tablet */
+    @media (max-width:425px){
+        .right-side{
+            margin-bottom: 20px !important;
+        }
+    }
     @media(max-width:991px){
         margin-bottom: 51px;
         .main-title{
