--- a/assets/css/theme-styles.css
+++ b/assets/css/theme-styles.css
@@ -457,6 +457,12 @@ header {
   }
 }
 
+@media (max-width: 425px) {
+  .hero-section .right-side {
+    margin-bottom: 20px !important;
+  }
+}
+
 @media (max-width: 991px) {
   .hero-section {
     margin-bottom: 51px;
@@ -573,6 +579,12 @@ header {
   .job-desc-section .job-desc:last-child {
     padding-left: 10.5px;
     padding-right: 0px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1400px) {
+  .job-desc-section .job-title {
+    min-height: 86px;
   }
 }
 
