--- a/assets/sass/_hero-section.scss
+++ b/assets/sass/_hero-section.scss
@@ -58,6 +58,7 @@
                         margin: 0px;
                         position: relative;
                         z-index: 1;
+                        text-align: left;
                     }
                     img{
                         position: absolute;
