--- a/assets/sass/_hero-section.scss
+++ b/assets/sass/_hero-section.scss
@@ -69,7 +69,8 @@
                         width: 50%;
                         background-color: $primary;
                         color: transparent;
-                        height: 238px;
+                        // height: 238px;
+                        height: 100%;
                         position: absolute;
                         left: 0;
                         .main-title{
