--- a/assets/sass/_hero-section.scss
+++ b/assets/sass/_hero-section.scss
@@ -1,5 +1,8 @@
 .hero-section{
     margin-bottom: 80px;
+    hr{
+        border-top-width: 3px;
+    }
     .main-title{
         font-size: 64px;
         line-height: 127.5%;
