--- a/assets/sass/_helpers.scss
+++ b/assets/sass/_helpers.scss
@@ -20,6 +20,9 @@ body{
     font-size: 22px;
     line-height: 143.9%;
     font-family: 'Work sans', sans-serif;
+    @media(max-width:768px){
+        font-size: 18px;
+    }
 }
 .main-title{
     font-family: 'Poppins', sans-serif;
@@ -37,7 +40,7 @@ body{
     font-weight: bold;
 }
 .seperator{
-    border-top: 3px solid $black;
+    border-top: 1.6px solid $black;
     width: 163px;
     margin-left: 0;
 }
