Keep scrolling section

--- a/assets/sass/theme-styles.scss
+++ b/assets/sass/theme-styles.scss
@@ -1,8 +1,9 @@
 @import "variables";
 @import "helpers";
 @import "header";
-@import "slider";
 @import "hero-section";
-@import "job-desc-section";
+@import "keep-scrolling-section";
+@import "slider";
 @import "hiring-team-section";
 @import "video-section";
+@import "job-desc-section";
