--- a/assets/sass/_helpers.scss
+++ b/assets/sass/_helpers.scss
@@ -70,3 +70,39 @@ body{
         }
     }
 }
+
+/* Slick navigation */
+.slick-dots {
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 15px;
+    li{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &:not(:last-child){
+            margin-right: 10px;
+        }
+        button{
+            border: 2px solid #141414;
+            font-size: 0;
+            height: 10px;
+            width: 10px;
+            padding: 0;
+            margin: 0;
+            outline: none !important;
+            background-color: transparent;
+            border-radius: 10px;
+            transition: background 0.35s ease;
+        }
+        &.slick-active{
+            button{
+                background-color: #141414;
+            }
+        }
+    }
+}
